SS: Styled topbar dropdown, fixed dropdown z-index

--- a/StarlightStage/main.css
+++ b/StarlightStage/main.css
@@ -70,6 +70,18 @@ div#RESShortcutsEditContainer {
     background-color: transparent;
     color: white;
 }
+.drop-choices {
+    /* higher layer than logo */
+    z-index: 999;
+    border: 0;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 4px #000;
+    overflow: hidden;
+    background-color: rgba(72,162,225,.95);
+}
+.drop-choices>.choice:hover {
+    background-color:rgba(102,192,255,.95);
+}
 
 /* Userbar */
 div#header-bottom-right {
